# bp-addon

./: API-DOC  CHANGES  INSTALL  README  UPDATE
.buildfiles/: Makefile.in  build-bp-addon.sh  configure.ac  subst.in
.buildfiles/etc/: Makefile.in
.buildfiles/etc/apache-conf.d/: Makefile.in
.buildfiles/etc/cron.d/: Makefile.in
.buildfiles/libexec/: Makefile.in
.buildfiles/man/: Makefile.in
.buildfiles/sbin/: Makefile.in
.buildfiles/share/: Makefile.in
.buildfiles/share/lang/: Makefile.in
.buildfiles/share/stylesheets/: Makefile.in
.buildfiles/test-scripts/: holdLock.pl
.buildfiles/var/bp-addon.sessions/: Makefile.in
.buildfiles/var/cache/: Makefile.in
.buildfiles/var/cache/backend/: Makefile.in
.buildfiles/var/cache/sessions/: Makefile.in
etc/: business-processes-second-view.conf  business-processes.conf  dataBackend.cfg  settings.cfg
etc/apache-conf.d/: bp-addon.conf.in
etc/check_cluster_generic/: host_cluster_dns-sample  service_cluster_dns-sample
etc/cron.d/: bp-addon.in
lib/: bsutils.pm  businessProcessFunctions.pm  dataBackend.pm  settings.pm
libexec/: check_bp_status  check_bp_status.pl  check_cluster_generic
man/: bp-addon-check-backend-connection.8  bp-addon-consistency-check.8  bp-addon-session-timeout.8  bp-cfg2service-cfg.8
sbin/: bp-addon.cgi  whereUsed.cgi
share/lang/: i18n_de.txt  i18n_en.txt
share/stylesheets/: bp-addon.css  user.css
